demo/canary-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
  namespace: test
spec:
  selector:
    app: canary-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
