demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    argo-rollouts.argoproj.io/canary: "true"
  generation: 1
  labels:
    app.kubernetes.io/instance: demo
  name: canary-demo
  namespace: test
spec:
  rules:
  - host: canary-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-demo
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-demo-canary
            port:
              number: 8080
